# multisig-server

./: Cargo.toml  Makefile  README.md
crates/api/: Cargo.toml  build.rs
crates/api/proto/multisig_service/: api.proto
crates/api/src/: api.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs  service.rs
crates/server/tests/: server_tests.rs
