[package]
name = "multisig-service"
version = "0.1.0"
authors = ["avive <avive@spacemesh.io>"]
description = "Spacemesh multi-sig service"
edition = "2018"

[dependencies]
api = { path = "../api" }

bytes = { version = "0.6", features = ["serde"] }
log = "*"
env_logger = "*"
anyhow = "1"
datetime = "*"
config = "*"
nix = "0.20.2"
getopts = "*"
clap = "*"
hex = "*"
chrono = "*"
xactor = { version = "0.7.11", features = ["runtime-tokio"], default-features = false}
xactor-derive = "0.7.0"
async-trait = "0.1.42"
futures = "0.3"
prost = "0.7"
tonic = "0.4.2"
tokio = { version = "1.5", features = ["full"] }
tokio-stream = "*"
tokio-timer = "*"
rand = "0.8.0"
rocksdb = "0.16.0"
bincode = "1.3.3"
serial_test = "*"



